--- a/Hafta4/Hafta4.html
+++ b/Hafta4/Hafta4.html
@@ -56,7 +56,11 @@
     <br>
     <h3>Zonguldak Bülent Ecevit Üniversitesi'inin sitesine ulaşmak için <a href="https://w3.beun.edu.tr" target="_top">buraya</a> tıklayınız</h3> <!-- sadece a etiketinin icerisindeki metin bizim girdiğimiz yolla bağlantımızı oluşturur-->
     <a href="https://w3.beun.edu.tr" target="_parent">Üni web Sitesi</a>
-
+    <br>
+    <a href="https://github.com/semihacmali/WebTasarim">Web Tasarım Ders Notları</a>
+    <br>
+    <h4>Zonguldak Bülent Ecevit Üniversitesi'ne mail atmak için <a href="mailto:info@beun.edu.tr"> buraya</a> tıklayınız</h4> <!-- mailto ifadesi ile mail atmak istenilen kişi veya kuruma otomatik olarak mail servisi üzerinden ulaşılabilir-->
+    <a href="logo300pxtr.rar">Aynı site içerisinde bir dosyaya erişmek</a> <!-- sadece başka web sitelerine değil dosyalarada erişebiliriz-->
 
 </body>
 </html>
